lectureEditor: Audio Loudness Normaliaztion and QoL improvements (#804)
* editor: added audio loudness normalization
editor: added adjust audio loudness functionality when importing recordings
editor: made new document in ReplacePageView searchable
editor: added new shortcuts
editor: added functionality of exporting current pdf page
editor: improved view of page events
editor: fixes of wrong usage of ProgressDialogView to prevent unusability of editor in error case

* changed wording of loudness normalization text

* editor: Fixes to texts, placing of new loudness normalization feature, and shortcut

* editor: deactivate move and zoom-out button, unless zoomed in

* editor-fx: extended search field width to show the whole prompt text
editor-api: normalize loudness as default when importing recordings